# OpenGLProject

./: CMakeLists.txt  ONEMLI_NOTLAR.md  glad.c  main.cpp
lib/glad/include/glad/: glad.h
